fix blank space after gallery, fix image distortion on resize, mobile layout projects

--- a/_sass/elements-extra.scss
+++ b/_sass/elements-extra.scss
@@ -125,6 +125,11 @@
 {
 	margin-left: auto;
 	flex-direction: row-reverse;
+
+	@media screen and #{$half-screen}
+	{
+		flex-direction: column;
+	}
 }
 
 .element-container
@@ -136,6 +141,10 @@
 	a {
 		color: white;
 		font-weight: bold;
+	}
+	img {
+			object-fit: cover;
+			min-width: 100px;
 	}
 }
 
