--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -14,7 +14,6 @@
 		flex: 1;
 	}
 	//content centered
-	display: table;
   margin: auto;
 	padding: 1em 30px;
 
